my-app/k8s/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
  labels:
    app: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: my-app-db  # Assicurati che l'immagine sia presente
        imagePullPolicy: Never
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-storage
        persistentVolumeClaim:
          claimName: mysql-pvc  # Collegheremo il PVC più avanti
#va messo imagePullPolicy: Never perchè sennò cerca di prendere 
#l'immagine da dockerhub piuttosto che quella tirata su da noi
