my-app/k8s/proxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-proxy-deployment
  namespace: proxy-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: proxy-app
  template:
    metadata:
      labels:
        app: proxy-app
    spec:
      containers:
      - name: proxy-container
        image: my-app-proxy:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8000
