my-app/k8s/stories-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stories-microservice
  labels:
    app: stories-microservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stories-microservice
  template:
    metadata:
      labels:
        app: stories-microservice
    spec:
      containers:
      - name: stories-microservice
        image: my-app-backend-stories:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
