my-app/k8s/tts-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tts-backend-deployment
  labels:
    app: tts-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tts-app
  template:
    metadata:
      labels:
        app: tts-app
    spec:
      containers:
        - name: tts-container
          image: my-app-backend-tts
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
