my-app/k8s/ai-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-ia
spec:
  selector:
    app: ia-app
  ports:
  - protocol: TCP
    port: 5001
    targetPort: 5001
