my-app/k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-expo
spec:
  selector:
    app: frontend-app
  ports:
    - port: 8081
      targetPort: 8081
  type: ClusterIP
