my-app/k8s/stories-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-stories
spec:
  selector:
    app: stories-microservice
  ports:
  - protocol: TCP
    port: 8080  # Porta su cui il servizio sarà accessibile
    targetPort: 8080  # Porta sul container
  type: ClusterIP  # Modifica se desideri un altro tipo di servizio, come NodePort o LoadBalancer
