my-app/k8s/tts-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tts-backend-service
  namespace: backend-ns
spec:
  selector:
    app: tts-app
  ports:
    - port: 5000
      protocol: TCP
  type: ClusterIP
