my-app/k8s/users-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-users
  labels:
    app: users-app
spec:
  selector:
    app: users-app
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
